Offer controller update