@@ -1,6 +1,7 @@
 package org.piotrowski.cardureadoo.application.service;
 
 import lombok.RequiredArgsConstructor;
+import org.piotrowski.cardureadoo.application.exception.web.ResourceNotFoundException;
 import org.piotrowski.cardureadoo.application.port.in.OfferService;
 import org.piotrowski.cardureadoo.application.port.out.CardRepository;
 import org.piotrowski.cardureadoo.application.port.out.ExpansionRepository;
@@ -17,6 +18,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.time.Instant;
+import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 
@@ -30,20 +32,10 @@ public class OfferApplicationService implements OfferService {
 
     @Transactional
     @Override
-    public long addOffer(AddOfferCommand cmd) {
-        if (cmd.expExternalId() == null || cmd.expExternalId().isBlank()) {
-            throw new IllegalArgumentException("expExternalId is required");
-        }
-        if (cmd.cardNumber() == null || cmd.cardNumber().isBlank()) {
-            throw new IllegalArgumentException("cardNumber is required");
-        }
-        if (cmd.amount() == null) {
-            throw new IllegalArgumentException("amount is required");
-        }
-
+    public long create(CreateOfferCommand cmd) {
         final var expId = new ExpansionExternalId(cmd.expExternalId());
         final var cardNumber = new CardNumber(cmd.cardNumber());
-        final var when = (cmd.listedAt() != null) ? cmd.listedAt() : Instant.now();
+        final var listedAt = (cmd.listedAt() != null) ? cmd.listedAt() : Instant.now();
 
         final var currency = (cmd.currency() == null || cmd.currency().isBlank())
                 ? "PLN"
@@ -57,17 +49,8 @@ public class OfferApplicationService implements OfferService {
         }
 
         final var price = Money.of(amount, currency);
-        final var rarity = new CardRarity(cmd.cardRarity());
 
-        if (!cardRepository.exists(expId, cardNumber)) {
-            final var name = (cmd.cardName() != null && !cmd.cardName().isBlank())
-                    ? new CardName(cmd.cardName())
-                    : new CardName("UNKNOWN");
-
-            cardRepository.save(Card.of(name, rarity, cardNumber, expId));
-        }
-
-        var persisted = offerRepository.save(Offer.of(expId, cardNumber, price, when));
+        var persisted = offerRepository.save(Offer.of(expId, cardNumber, price, listedAt));
 
         return persisted.getId();
     }
@@ -90,64 +73,16 @@ public class OfferApplicationService implements OfferService {
                 .toList();
     }
 
-    @Transactional(readOnly = true)
-    @Override
-    public List<OfferPointDto> getAll(Instant from, Instant to) {
-        final var f = from != null ? from : Instant.EPOCH;
-        final var t = to != null ? to : Instant.now();
-
-        return offerRepository.findAll(f, t).stream()
-                .map(o -> new OfferPointDto(
-                        o.getId(),
-                        o.getListedAt(),
-                        o.getPrice().amount(),
-                        o.getPrice().currency()
-                ))
-                .toList();
-    }
-
-
-    @Transactional(readOnly = true)
-    @Override
-    public OfferPointDto getLast(String expExternalId, String cardNumber) {
-        final var expId = new ExpansionExternalId(expExternalId);
-        final var num = new CardNumber(cardNumber);
-
-        return offerRepository.findLast(expId, num)
-                .map(o -> new OfferPointDto(
-                        o.getId(),
-                        o.getListedAt(),
-                        o.getPrice().amount(),
-                        o.getPrice().currency()))
-                .orElse(null);
-    }
-
-    @Transactional(readOnly = true)
-    @Override
-    public OfferStatsDto getStats(String expExternalId, String cardNumber, Instant from, Instant to) {
-        final var expId = new ExpansionExternalId(expExternalId);
-        final var num = new CardNumber(cardNumber);
-        final var f = from != null ? from : Instant.EPOCH;
-        final var t = to != null ? to : Instant.now();
-
-        final var s = offerRepository.stats(expId, num, f, t);
-        return new OfferStatsDto(s.min(), s.max(), s.avg(), s.count());
-    }
-
-    @Override
-    @Transactional
-    public void deleteById(Long id) {
-        offerRepository.deleteById(id);
-    }
-
     @Override
     @Transactional
     public void patch(long offerId, PatchOfferCommand cmd) {
-        var money = (cmd != null && (cmd.amount() != null || cmd.currency() != null))
-                ? Money.of(cmd.amount() != null ? cmd.amount() : null, cmd.currency()) : null;
+        final var currency = (cmd.currency() == null || cmd.currency().isBlank())
+                ? "PLN" : cmd.currency().trim().toUpperCase(Locale.ROOT);
 
-        var listedAt = (cmd != null) ? cmd.listedAt() : null;
-        offerRepository.patch(offerId, money, listedAt);
+        var price = Money.of(cmd.amount(), currency);
+        final var listedAt = (cmd.listedAt() != null) ? cmd.listedAt() : Instant.now();
+
+        offerRepository.patch(offerId, price, listedAt);
     }
 
     @Transactional(readOnly = true)
@@ -157,22 +92,28 @@ public class OfferApplicationService implements OfferService {
         final var f = from != null ? from : Instant.EPOCH;
         final var t = to != null ? to : Instant.now();
 
-        var cardIds = cardRepository.findIdsByExpansionAndName(expExternalId, cardName);
-        if (cardIds == null || cardIds.isEmpty()) {
-            return List.of();
-        }
+//        var cardIds = cardRepository.findIdsByExpansionAndName(expExternalId, cardName);
+//        if (cardIds.isEmpty()) {
+//            return Collections.emptyList();
+//        }
 
         CardNumber number;
         {
             var allCards = cardRepository.listByExpansion(expId, 0, Integer.MAX_VALUE);
-            var maybeCard = allCards.stream()
+
+            if (allCards.isEmpty()) {
+                return Collections.emptyList();
+            }
+
+            var optCard = allCards.stream()
                     .filter(c -> c.getNumber() != null && c.getName() != null &&
                             c.getName().value().equals(cardName))
                     .findFirst();
-            if (maybeCard.isEmpty()) {
-                return List.of();
+
+            if (optCard.isEmpty()) {
+                return Collections.emptyList();
             }
-            number = maybeCard.get().getNumber();
+            number = optCard.get().getNumber();
         }
 
         return offerRepository.find(expId, number, f, t)
@@ -183,5 +124,16 @@ public class OfferApplicationService implements OfferService {
                         o.getPrice().amount(),
                         o.getPrice().currency()))
                 .toList();
+    }
+
+    @Override
+    @Transactional
+    public void deleteById(Long id) {
+        var offerOpt = offerRepository.findById(id);
+        if (offerOpt.isEmpty()) {
+            throw new ResourceNotFoundException("Offer with id " + id + " not found");
+        }
+
+        offerRepository.deleteById(id);
     }
 }
